--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -213,9 +213,9 @@
     "\n",
     "1. 第一个技巧是，采用了两个评论员网络，谁给出的目标Q值小，就用谁的Q值;\n",
     "\n",
-    "2. 第二个技巧是，目标网络需要延迟更新，在DDPG之前的案例中就已经这样操作了; \n",
+    "2. 第二个技巧是，目标网络需要延迟更新，在DDPG之前的案例中就已经这样操作了; 这里策略（演员）网络的更新也要延迟，策略网络更新太快会导致输出的动作很不稳定。并且更新方法采用和DDPG一样的软更新;\n",
     "\n",
-    "3. 第三个技巧是，这里策略（演员）网络的更新也要延迟，策略网络更新太快会导致输出的动作很不稳定。并且更新方法采用和DDPG一样的软更新;\n",
+    "3. 第三个技巧是，引入平滑化（smoothing）思想。TD3在目标动作中加入噪声，通过平滑 Q 沿动作的变化，使策略更难利用 Q 函数的误差。\n",
     "\n",
     "* 即时更新\n",
     "    - 原评论员网络 `critic_1` 和 `critic_2` **直接梯度下降**\n",
