--- a/强化学习笔记/15_模仿学习.ipynb
+++ b/强化学习笔记/15_模仿学习.ipynb
@@ -420,7 +420,7 @@
     "\n",
     "        expert_prob = self.discriminator(expert_states, expert_actions)  # 专家状态动作打分\n",
     "        agent_prob = self.discriminator(agent_states, agent_actions)  # agent状态动打分\n",
-    "        # * 二元交叉熵损失 BCELoss, 专家轨迹label为0, agent轨迹label为1, 越靠近0, 代表该轨迹越接近专家轨迹\n",
+    "        # * 二元交叉熵损失 BCELoss, 专家轨迹label为0; agent轨迹label为1, 越靠近0, 代表该轨迹越接近专家轨迹\n",
     "        # * 这里让目标函数梯度下降, 可以让agent与环境交互的行为分布接近专家的交互分布\n",
     "        # * 也就是让agent生成的状态动作接近轨迹\n",
     "        discriminator_loss = torch.nn.BCELoss()(agent_prob, torch.ones_like(agent_prob)) \\\n",
@@ -429,8 +429,8 @@
     "        discriminator_loss.backward()\n",
     "        self.discriminator_optimizer.step()\n",
     "\n",
-    "        # agent_prob是判别器把agent识别为模仿者的概率, 所以可以让这个概率越小越好, 因此就加负号, 变成奖励\n",
-    "        # 这样在训练演员的时候, 就可以引导演员往降低agent_prob的方向调整\n",
+    "        # agent_prob 是判别器把 agent 识别为模仿者的概率, 所以可以让这个概率越小越好, 因此就加负号, 变成奖励\n",
+    "        # 这样在训练演员的时候, 就可以引导演员往降低 agent_prob 的方向调整\n",
     "        rewards = -torch.log(agent_prob).detach().cpu().numpy()\n",
     "        transition_dict = {\n",
     "            'states': agent_s,\n",
@@ -471,6 +471,7 @@
     "            state = next_state\n",
     "            episode_return += reward\n",
     "        return_list.append(episode_return)\n",
+    "        # 专家轨迹 expert_s 和 expert_a 是在前面收集好的\n",
     "        gail.learn(expert_s, expert_a, state_list, action_list,\n",
     "                   next_state_list, done_list, truncated_list)\n",
     "        if (i + 1) % 10 == 0:\n",
