--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -209,7 +209,7 @@
     "        self.optimizer.zero_grad()\n",
     "        loss += 0.01 * torch.sum(self._max_logvar) - 0.01 * torch.sum(self._min_logvar)\n",
     "        loss.backward()\n",
-    "        self.optimizer.step()\n"
+    "        self.optimizer.step()"
    ]
   },
   {
