更新MBPO等详细注释说明

--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -337,7 +337,7 @@
     "        ensemble_model_stds = np.sqrt(ensemble_model_vars)\n",
     "        ensemble_samples = (\n",
     "            ensemble_model_means + np.random.normal(size=ensemble_model_means.shape) * ensemble_model_stds\n",
-    "        )\n",
+    "        )  # * 还原next_obs\n",
     "\n",
     "        num_models, batch_size, _ = ensemble_model_means.shape\n",
     "        models_to_use = np.random.choice(\n",
@@ -542,10 +542,23 @@
    "source": [
     "# 算法框架图\n",
     "\n",
-    "第一次见这么复杂的。。。并没有完全搞清楚\n",
+    "问题解答：\n",
     "\n",
+    "1. loss那里加上了方差区间，是为了缩小估计方差\n",
+    "2. `label=next_obs-obs`，在`FakeEnv.step()`里面还原了`next_obs`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![PETS算法.jpg](https://s2.loli.net/2023/08/28/TPfkbxCWD5UH7ZA.jpg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
