--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -139,7 +139,7 @@
     "    \n",
     "    def update(self, transition_dict):\n",
     "        states = torch.tensor(transition_dict['states'], dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(transition_dict['actions']).view(-1, 1).to(self.device)\n",
+    "        actions = torch.tensor(transition_dict['actions'], dtype=torch.int64).view(-1, 1).to(self.device)\n",
     "        rewards = torch.tensor(transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
     "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
