修改笔记错误

--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -319,7 +319,7 @@
     "                'epoch': epoch,\n",
     "                'episode': episode,\n",
     "                'best_weight': best_weight,\n",
-    "                'epsilon': epsilon,\n",
+    "                'epsilon': agent.epsilon,\n",
     "                'return_list': return_list,\n",
     "                }, CKP_PATH)\n",
     "                \n",
@@ -393,9 +393,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
-    "                                          replay_buffer=replay_buffer, minimal_size=minimal_size,\n",
-    "                                          batch_size=batch_size)"
+    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, s_epoch=s_epoch, total_epoch=total_epoch, \n",
+    "                                          s_episode=s_episode, total_episode=total_episode, replay_buffer=replay_buffer, \n",
+    "                                          minimal_size=minimal_size, batch_size=batch_size)"
    ]
   },
   {
@@ -558,9 +558,9 @@
     "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DoubleDQN')\n",
-    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
-    "                                          replay_buffer=replay_buffer, minimal_size=minimal_size,\n",
-    "                                          batch_size=batch_size)"
+    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, s_epoch=s_epoch, total_epoch=total_epoch, \n",
+    "                                          s_episode=s_episode, total_episode=total_episode, replay_buffer=replay_buffer, \n",
+    "                                          minimal_size=minimal_size, batch_size=batch_size)"
    ]
   },
   {
@@ -657,8 +657,9 @@
     "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DuelingDQN')\n",
-    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, \n",
-    "                                          total_episode=total_episode, replay_buffer=replay_buffer, minimal_size=minimal_size, batch_size=batch_size)"
+    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, s_epoch=s_epoch, total_epoch=total_epoch, \n",
+    "                                          s_episode=s_episode, total_episode=total_episode, replay_buffer=replay_buffer, \n",
+    "                                          minimal_size=minimal_size, batch_size=batch_size)"
    ]
   },
   {
