--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -584,7 +584,7 @@
     "        self.actor_optimizer.step()\n",
     "        \n",
     "        # 更新alpha值\n",
-    "        alpha_loss = torch.mean((entropy - target_entropy).detach() * self.log_alpha.exp())\n",
+    "        alpha_loss = torch.mean((entropy - self.target_entropy).detach() * self.log_alpha.exp())\n",
     "        self.log_alpha_optimizer.zero_grad()\n",
     "        alpha_loss.backward()\n",
     "        self.log_alpha_optimizer.step()\n",
