--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -133,9 +133,10 @@
     "        self.critic_2_optimizer = torch.optim.Adam(\n",
     "            self.critic_2.parameters(), lr=critic_lr)\n",
     "\n",
-    "    def take_action(self, state) -> list:\n",
+    "    def take_action(self, state: torch.Tensor) -> list:\n",
+    "        state = state.reshape(-1)\n",
     "        self.sample_count += 1\n",
-    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
     "        action = self.actor(state).item()\n",
     "        if self.training:\n",
     "            # 给动作添加噪声, 增加探索, 加上裁剪\n",
@@ -157,18 +158,12 @@
     "                param_target.data * (1.0 - self.tau) + param.data * self.tau)\n",
     "\n",
     "    def update(self, transition_dict: dict):\n",
-    "        states = torch.tensor(\n",
-    "            transition_dict['states'], dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(\n",
-    "            transition_dict['actions'], dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(\n",
-    "            transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(\n",
-    "            transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(\n",
-    "            transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(\n",
-    "            transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        states = torch.tensor(transition_dict['states'], dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(transition_dict['actions'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        # * 技巧3: 平滑动作计算, 加入了噪声的目标动作\n",
     "        noise = (torch.randn_like(actions) * self.policy_noise)  # 构造加入目标动作的噪声, rand_like保持shape\n",
@@ -244,7 +239,7 @@
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
     "total_episodes = 200  # 总回合\n",
-    "total_epochs = 10  # 总轮数\n",
+    "total_epochs = 11  # 总轮数\n",
     "gamma = 0.98\n",
     "tau = 0.005  # 软更新参数, tau越小更新幅度越小\n",
     "buffer_size = 10000\n",
@@ -464,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
