--- a/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
+++ b/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
@@ -215,7 +215,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "还有其他类型编码器，这里不详细写"
+    "# VEA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets, transforms\n",
+    "from tqdm import trange\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# 定义CVAE模型\n",
+    "class CVAE(nn.Module):\n",
+    "    def __init__(self, input_dim=28*28, z_dim=20, n_classes=10, hidden_dim=400):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        # 编码器\n",
+    "        self.fc1 = nn.Linear(input_dim + n_classes, hidden_dim)\n",
+    "        self.fc21 = nn.Linear(hidden_dim, z_dim)  # 均值向量\n",
+    "        self.fc22 = nn.Linear(hidden_dim, z_dim)  # 方差向量\n",
+    "        \n",
+    "        # 解码器\n",
+    "        self.fc3 = nn.Linear(z_dim + n_classes, hidden_dim)\n",
+    "        self.fc4 = nn.Linear(hidden_dim, input_dim)\n",
+    "\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def encoder(self, x, y):\n",
+    "        '''编码器'''\n",
+    "        input_combined = torch.cat([x, y], dim=1)\n",
+    "        h1 = self.relu(self.fc1(input_combined))\n",
+    "        z_mu = self.fc21(h1)\n",
+    "        z_logvar = self.fc22(h1)\n",
+    "        return z_mu, z_logvar\n",
+    "\n",
+    "    def reparameterize(self, mu, logvar):\n",
+    "        '''重参数技巧'''\n",
+    "        std = torch.exp(0.5 * logvar)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        return mu + eps * std\n",
+    "\n",
+    "    def decoder(self, z, y):\n",
+    "        '''解码器\n",
+    "        ---\n",
+    "        :param z: 隐空间向量\n",
+    "        :param y: 条件\n",
+    "        '''\n",
+    "        input_combined = torch.cat([z, y], dim=1)\n",
+    "        h3 = self.relu(self.fc3(input_combined))\n",
+    "        return self.sigmoid(self.fc4(h3))\n",
+    "\n",
+    "    def forward(self, x, y):\n",
+    "        z_mu, z_logvar = self.encoder(x, y)\n",
+    "        z = self.reparameterize(z_mu, z_logvar)\n",
+    "        return self.decoder(z, y), z_mu, z_logvar\n",
+    "\n",
+    "# CVAE损失函数\n",
+    "def loss_function(recon_x, x, mu, logvar):\n",
+    "    # x = (x + 1) / 2\n",
+    "    MSE = nn.functional.binary_cross_entropy(recon_x, x)\n",
+    "    KLD = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    return MSE + KLD\n",
+    "\n",
+    "# 数据预处理\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    # transforms.Normalize((0.5,), (0.5,))\n",
+    "])\n",
+    "\n",
+    "# * 模型参数\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "z_dim = 30\n",
+    "n_classes = 10  # 数字0到9\n",
+    "hidden_dim = 128\n",
+    "model = CVAE(z_dim=z_dim, n_classes=n_classes, hidden_dim=hidden_dim).to(device)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
+    "\n",
+    "# 加载MNIST数据集\n",
+    "batch_size = 128  # * 调整批量大小观察效果\n",
+    "train_dataset = datasets.MNIST(root='../../data', train=True, transform=transform, download=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "loss_list = []\n",
+    "# 训练模型\n",
+    "epochs = 10\n",
+    "for epoch in trange(epochs):\n",
+    "    model.train()\n",
+    "    train_loss = 0\n",
+    "    for batch_idx, (data, labels) in enumerate(train_loader):\n",
+    "        data = data.view(-1, 28*28).to(device)\n",
+    "        labels_onehot = torch.eye(10)[labels].to(device)  # 将标签转换为one-hot编码\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        recon_batch, mu, logvar = model(data, labels_onehot)\n",
+    "        loss = loss_function(recon_batch, data, mu, logvar)\n",
+    "        loss.backward()\n",
+    "        train_loss += loss.item()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "    loss_list += [train_loss / len(train_loader.dataset)]\n",
+    "    print(f\"Epoch {epoch + 1}, Loss: {train_loss / len(train_loader.dataset):.4f}\")\n",
+    "\n",
+    "# 打印损失\n",
+    "sns.lineplot(loss_list)\n",
+    "\n",
+    "# 生成图片\n",
+    "def generate_image(model, label, z_dim=20):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        z = torch.randn(1, z_dim).to(device)\n",
+    "        label_onehot = torch.eye(10)[label].unsqueeze(0).to(device)\n",
+    "        generated_img = model.decoder(z, label_onehot).cpu().view(28, 28)\n",
+    "        return generated_img\n",
+    "\n",
+    "# 生成指定数字的图片\n",
+    "for label in range(0, 10):\n",
+    "    generated_img = generate_image(model, label, z_dim)\n",
+    "    plt.imshow(generated_img, cmap=\"gray\")\n",
+    "    plt.show()"
    ]
   },
   {
